# Animation-Editor-2

./: .gitignore  .gitmodules  compile.py  main.py  requirements.txt  setup.sh
.github/workflows/: windows-build.yml
Previewer/: .gitignore  Animation.cpp  Animation.cpp.save-failed  Animation.hpp  CMakeLists.txt  File.cpp  File.hpp  GameClock.hpp  Previewer.cbp  Properties.cpp  ResourcePool.cpp  ResourcePool.hpp  ResourceTypes.hpp  main.cpp
controller/: actions.py  batch.py  files.py  frames.py  images.py  interpolate.py  pieces.py
controller/helpers/: actions.py  export.py
model/: actions.py  frames.py  images.py  pieces.py
view/: animation_editor.py  batch_edits.py  controls.py  edit_canvas.py  editable_piece.py  frame_options.py  history.py  images_list.py  interpolate.py  menu_bar.py  piece_settings.py  spritesheet_importer.py  util.py
